[package]
name = "lessons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
  "hello_world",
  "variables",
  "memory_management",
  "stdin-out",
  "library",
  "dependency",
  "enumerations", "strcutures",
]
